--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,11 @@
 	  <artifactId>commons-configuration2</artifactId>
 	  <version>2.9.0</version>
 	</dependency>
+	<dependency>
+	    <groupId>commons-beanutils</groupId>
+	    <artifactId>commons-beanutils</artifactId>
+	    <version>1.9.4</version>
+	</dependency>
     <dependency>
 	    <groupId>commons-io</groupId>
 	    <artifactId>commons-io</artifactId>
